@@ -1418,5 +1418,8 @@
 	* apps/nettest: Extend test so that can be performed using the local
 	  loopback device (2015-08-26).
 	* apps/nshlib: Fix error handling in 'cat' command.  On a failure to
-	  allocate memory, a file ws not being closed.  From Bruno Herrera
+	  allocate memory, a file was not being closed.  From Bruno Herrera
 	  (2015-08-26).
+	* apps/nshlib: Fix error handling in 'mv' command.  On a failure to
+	  expand the second path, the memory allocated for the expansion of the
+	  first path was not being freed.  From Bruno Herrera (2015-08-26).
